@@ -4,6 +4,8 @@ Products.CMFCalendar Changelog
 2.1.3-beta (unreleased)
 -----------------------
 
+- Fixed a bug were the last day of each month was missed.
+  (see https://dev.plone.org/plone/ticket/7238)
 
 2.1.2 (2008-09-13)
 ------------------
